# simplecs

./: .gitignore  CMakeLists.txt  c_core.cpp  c_core.h  shared_lib.cpp
.github/workflows/: cmake.yml
cmake/: clean_build.cmake  configure_tests.cmake  export_visibility.cmake
include/simplecs/: c_core_api.hpp  component_storage.hpp  components.hpp  config.hpp  registry.hpp  relational_table.hpp  simplecs.hpp
include/simplecs/c_api/: c_core.hpp  component_storage.hpp  context.hpp  entity_storage.hpp  relational.hpp  relational_table.hpp  storage.hpp  types.h
include/simplecs/c_api/src/: component_storage.ipp  context.ipp  entity_storage.ipp  relational.ipp  relational_table.ipp  storage.ipp
include/simplecs/c_core/: relational.hpp  storage.hpp
include/simplecs/c_core/src/: relational.ipp  storage.ipp
include/simplecs/generic/: component_storage.h  components.h  registry.h  relational_table.h  selection.h  selector.h
include/simplecs/impl/: id_pool.h  relational_table.h  selector.h  src.hpp
include/simplecs/src/: c_registry.ipp  component_storage.ipp  components.ipp  registry.ipp  relational_table.ipp
include/simplesc/: c_registry_api.h  config.hpp  registry.h
include/simplesc/generic/: selector.h
include/simplesc/impl/: selector.h  src.hpp
include/simplesc/src/: c_registry.ipp
test/: CMakeLists.txt  sandbox.cpp  test_c_api.cpp  test_c_api_component_storage.cpp  test_export_components_lib.cpp  test_export_components_lib.h  test_id_pool.cpp  test_registry.cpp  test_selector.cpp
